packages/fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.stderr
error: custom attribute panicked
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  | #[indexer(manifest = "packages/fuel-indexer-tests/trybuild/bad_simple_wasm_graphql.yaml")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Failed to parse GraphQL schema.: ParseError(Syntax { message: " --> 1:1\n  |\n1 | namespace: test_namespace\n  | ^---\n  |\n  = expected type_system_definition", start: Pos(1:1), end: None })

error[E0432]: unresolved import `fuels::traits`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     use fuels::{core::{codec::ABIEncoder}, traits::Tokenizable};
  |                                            ^^^^^^ could not find `traits` in `fuels`

error[E0422]: cannot find struct, variant or union type `SomeEvent` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     let s = SomeEvent {
  |             ^^^^^^^^^ not found in this scope

error[E0433]: failed to resolve: use of undeclared type `Consensus`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |         consensus: Consensus::default(),
  |                    ^^^^^^^^^ use of undeclared type `Consensus`
  |
help: consider importing one of these items
   |
2  + use crate::fuel::Consensus;
   |
2  + use fuel_indexer_plugin::prelude::fuel::Consensus;
   |
2  + use fuel_indexer_types::fuel::Consensus;
   |
2  + use fuel_indexer_utils::plugin::prelude::fuel::Consensus;
   |

error[E0433]: failed to resolve: use of undeclared type `Transaction`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |             transaction: Transaction::default(),
  |                          ^^^^^^^^^^^ use of undeclared type `Transaction`
  |
help: consider importing one of these items
   |
2  + use crate::fuel::Transaction;
   |
2  + use fuel_indexer_plugin::prelude::fuel::Transaction;
   |
2  + use fuel_indexer_types::fuel::Transaction;
   |
2  + use fuel_indexer_utils::plugin::prelude::fuel::Transaction;
   |
     and 1 other candidate

error[E0560]: struct `Header` has no field named `output_messages_count`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |             output_messages_count: 1,
  |             ^^^^^^^^^^^^^^^^^^^^^ `Header` does not have this field
  |
  = note: available fields are: `id`, `da_height`, `transactions_count`, `message_receipt_count`, `transactions_root` ... and 5 others

error[E0560]: struct `Header` has no field named `output_messages_root`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |             output_messages_root: [0u8; 32].into(),
  |             ^^^^^^^^^^^^^^^^^^^^ `Header` does not have this field
  |
  = note: available fields are: `id`, `da_height`, `transactions_count`, `message_receipt_count`, `transactions_root` ... and 5 others

error[E0308]: mismatched types
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |                     data: bytes,
  |                           ^^^^^ expected `Option<Vec<u8>>`, found `Vec<u8>`
  |
  = note: expected enum `std::option::Option<Vec<_>>`
           found struct `Vec<_>`
help: try wrapping the expression in `Some`
   |
65 |                     data: Some(bytes),
   |                           +++++     +

error[E0063]: missing field `producer` in initializer of `fuel_indexer_utils::prelude::BlockData`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     let data: Vec<BlockData> = vec![BlockData {
  |                                     ^^^^^^^^^ missing `producer`

error[E0425]: cannot find function `handle_events` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     handle_events(ptr, len);
  |     ^^^^^^^^^^^^^ not found in this scope
